Proyecto2/parser/parser.output
No terminales inútiles en la gramática

    LISTAEXP2


Reglas inútiles en la gramática

  115 LISTAEXP2: LISTAEXP2 ',' '.' id '=' EXP
  116          | '.' id '=' EXP


Estado 94 conflictos: 18 reducción/reducción
Estado 149 conflictos: 1 desplazamiento/reducción
Estado 199 conflictos: 1 desplazamiento/reducción
Estado 200 conflictos: 1 desplazamiento/reducción
Estado 201 conflictos: 1 desplazamiento/reducción
Estado 202 conflictos: 1 desplazamiento/reducción
Estado 203 conflictos: 1 desplazamiento/reducción
Estado 204 conflictos: 1 desplazamiento/reducción
Estado 205 conflictos: 1 desplazamiento/reducción
Estado 206 conflictos: 13 desplazamiento/reducción
Estado 207 conflictos: 1 desplazamiento/reducción
Estado 208 conflictos: 1 desplazamiento/reducción
Estado 209 conflictos: 1 desplazamiento/reducción
Estado 210 conflictos: 1 desplazamiento/reducción
Estado 211 conflictos: 1 desplazamiento/reducción
Estado 214 conflictos: 1 desplazamiento/reducción
Estado 238 conflictos: 1 desplazamiento/reducción, 14 reducción/reducción


Gramática

    0 $accept: START END

    1 START: MAIN
    2      | LIST_FUNC MAIN
    3      | LIST_FUNC LIST_STRUC MAIN
    4      | LIST_STRUC LIST_FUNC MAIN
    5      | LIST_STRUC MAIN

    6 LIST_STRUC: LIST_STRUC STRUCT_DECLARATION
    7           | STRUCT_DECLARATION

    8 LIST_FUNC: LIST_FUNC FUNC
    9          | FUNC

   10 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   11 LIST_INST: LIST_INST INSTRUCTION
   12          | INSTRUCTION

   13 INSTRUCTION: PRINT ';'
   14            | DECLARAR ';'
   15            | ASIGNAR ';'
   16            | VECTOR ';'
   17            | MATRIZ ';'
   18            | BREAK ';'
   19            | CONT ';'
   20            | RETORNO ';'
   21            | INCREMENTO ';'
   22            | LLAMADAF ';'
   23            | STRUCT_CREATION
   24            | WHILE
   25            | FOR
   26            | IF
   27            | error ';'

   28 DECLARAR: TYPES id
   29         | TYPES id '=' EXP

   30 ASIGNAR: id '=' EXP

   31 IF: res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELIF_LIST ELSE
   32   | res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELSE

   33 ELIF_LIST: ELIF_LIST ELIF
   34          | ELIF

   35 ELIF: res_ELSE res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   36 ELSE: res_ELSE tk_LLAVA LIST_INST tk_LLAVC
   37     | ε

   38 WHILE: res_WHILE tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   39 FOR: res_FOR tk_PARA DECLARAR ';' EXP ';' ASIGNAR tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   40    | res_FOR tk_PARA DECLARAR ';' EXP ';' INCREMENTO tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   41 BREAK: res_BREAK

   42 CONT: res_CONTINUE

   43 VECTOR: res_VECTOR tk_menorq TYPES tk_mayorq id '=' tk_CORCHA LISTAEXP tk_CORCHC
   44       | res_VECTOR tk_menorq TYPES tk_mayorq id
   45       | id '.' res_pushF tk_PARA EXP tk_PARC
   46       | id '.' res_pushB tk_PARA EXP tk_PARC
   47       | id '.' res_remove tk_PARA EXP tk_PARC
   48       | id tk_CORCHA EXP tk_CORCHC '=' id tk_CORCHA EXP tk_CORCHC
   49       | id tk_CORCHA EXP tk_CORCHC '=' EXP

   50 MATRIZ: TYPES id tk_CORCHA EXP tk_CORCHC '=' tk_LLAVA LISTAEXP tk_LLAVC
   51       | TYPES id tk_CORCHA EXP tk_CORCHC tk_CORCHA EXP tk_CORCHC '=' EXP
   52       | TYPES id tk_CORCHA EXP tk_CORCHC tk_CORCHA EXP tk_CORCHC tk_CORCHA EXP tk_CORCHC '=' EXP

   53 PRINT: PRINTF tk_PARA LISTAEXP tk_PARC

   54 INCREMENTO: id mas_mas
   55           | id menos_menos

   56 FUNC: TYPES id tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   57     | TYPES id tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   58 CALL_EXP: id tk_PARA LISTAEXP tk_PARC
   59         | id tk_PARA tk_PARC

   60 LLAMADAF: id tk_PARA LISTAEXP tk_PARC
   61         | id tk_PARA tk_PARC

   62 RETORNO: res_RETURN EXP
   63        | res_RETURN

   64 STRUCT_DECLARATION: res_struct id tk_LLAVA DEC_LIST tk_LLAVC

   65 STRUCT_CREATION: res_struct id id '=' tk_LLAVA LISTAEXP tk_LLAVC ';'

   66 DEC_LIST: DEC_LIST TYPES id ';'
   67         | TYPES id ';'

   68 TYPES: tk_int
   69      | tk_string
   70      | tk_float
   71      | tk_bool
   72      | tk_void
   73      | res_VECTOR tk_menorq TYPES tk_mayorq

   74 LISTAEXP: LISTAEXP ',' EXP
   75         | EXP

   76 LISTPARAM: LISTPARAM ',' TYPES id
   77          | TYPES id

   78 EXP: EXP suma EXP
   79    | EXP menos EXP
   80    | EXP mult EXP
   81    | EXP div EXP
   82    | EXP modulo EXP
   83    | tk_PARA EXP tk_PARC
   84    | EXP tk_menor_igual EXP
   85    | EXP tk_menorq EXP
   86    | EXP tk_mayor_igual EXP
   87    | EXP tk_mayorq EXP
   88    | EXP tk_igualq EXP
   89    | EXP tk_diferenteq EXP
   90    | EXP tk_and EXP
   91    | EXP tk_or EXP
   92    | res_atof tk_PARA EXP tk_PARC
   93    | res_atoi tk_PARA EXP tk_PARC
   94    | res_iota tk_PARA EXP tk_PARC
   95    | tk_not EXP
   96    | tk_LLAVA LISTAEXP tk_LLAVC
   97    | id '.' res_size tk_PARA tk_PARC
   98    | id '.' res_get tk_PARA EXP tk_PARC
   99    | id '.' id
  100    | PRIMITIVE
  101    | CALL_EXP

  102 PRIMITIVE: NUMERO
  103          | CADENA
  104          | id
  105          | tk_nulo
  106          | DECIMAL
  107          | tk_true
  108          | tk_false
  109          | res_mean tk_PARA id tk_PARC
  110          | res_median tk_PARA id tk_PARC
  111          | res_mode tk_PARA id tk_PARC
  112          | LIST_ARR

  113 LIST_ARR: LIST_ARR tk_CORCHA EXP tk_CORCHC
  114         | id


Terminales con las reglas donde aparecen

    END (0) 0
    ',' (44) 74 76
    '.' (46) 45 46 47 97 98 99
    ';' (59) 13 14 15 16 17 18 19 20 21 22 27 39 40 65 66 67
    '=' (61) 29 30 43 48 49 50 51 52 65
    error (256) 27
    NUMERO <std::string> (258) 102
    id <std::string> (259) 28 29 30 43 44 45 46 47 48 49 50 51 52 54 55 56 57 58 59 60 61 64 65 66 67 76 77 97 98 99 104 109 110 111 114
    CADENA <std::string> (260) 103
    DECIMAL <std::string> (261) 106
    suma <std::string> (262) 78
    menos <std::string> (263) 79
    mult <std::string> (264) 80
    div <std::string> (265) 81
    modulo <std::string> (266) 82
    PRINTF <std::string> (267) 53
    tk_void <std::string> (268) 10 72
    tk_int <std::string> (269) 68
    tk_string <std::string> (270) 69
    tk_float <std::string> (271) 70
    tk_bool <std::string> (272) 71
    tk_PARA <std::string> (273) 10 31 32 35 38 39 40 45 46 47 53 56 57 58 59 60 61 83 92 93 94 97 98 109 110 111
    tk_PARC <std::string> (274) 10 31 32 35 38 39 40 45 46 47 53 56 57 58 59 60 61 83 92 93 94 97 98 109 110 111
    rmain <std::string> (275) 10
    tk_LLAVA <std::string> (276) 10 31 32 35 36 38 39 40 50 56 57 64 65 96
    tk_LLAVC <std::string> (277) 10 31 32 35 36 38 39 40 50 56 57 64 65 96
    tk_true <std::string> (278) 107
    tk_false <std::string> (279) 108
    tk_igualq <std::string> (280) 88
    tk_diferenteq <std::string> (281) 89
    tk_mayor_igual <std::string> (282) 86
    tk_menor_igual <std::string> (283) 84
    tk_CORCHA <std::string> (284) 43 48 49 50 51 52 113
    tk_CORCHC <std::string> (285) 43 48 49 50 51 52 113
    tk_nulo <std::string> (286) 105
    tk_menorq <std::string> (287) 43 44 73 85
    tk_mayorq <std::string> (288) 43 44 73 87
    tk_and <std::string> (289) 90
    tk_or <std::string> (290) 91
    tk_not <std::string> (291) 95
    res_IF <std::string> (292) 31 32 35
    res_ELSE <std::string> (293) 35 36
    res_WHILE <std::string> (294) 38
    res_FOR <std::string> (295) 39 40
    res_BREAK <std::string> (296) 41
    res_CONTINUE <std::string> (297) 42
    res_RETURN <std::string> (298) 62 63
    res_pushB <std::string> (299) 46
    res_pushF <std::string> (300) 45
    res_get <std::string> (301) 98
    res_remove <std::string> (302) 47
    res_size <std::string> (303) 97
    res_struct <std::string> (304) 64 65
    res_mean <std::string> (305) 109
    res_median <std::string> (306) 110
    res_mode <std::string> (307) 111
    res_atoi <std::string> (308) 93
    res_atof <std::string> (309) 92
    res_iota <std::string> (310) 94
    res_VECTOR <std::string> (311) 43 44 73
    mas_mas <std::string> (312) 54
    menos_menos <std::string> (313) 55


No terminales con las reglas donde aparecen

    $accept (63)
        on left: 0
    START <func_main*> (64)
        on left: 1 2 3 4 5
        on right: 0
    LIST_STRUC <list_instruction*> (65)
        on left: 6 7
        on right: 3 4 5 6
    LIST_FUNC <list_instruction*> (66)
        on left: 8 9
        on right: 2 3 4 8
    MAIN <func_main*> (67)
        on left: 10
        on right: 1 2 3 4 5
    LIST_INST <list_instruction*> (68)
        on left: 11 12
        on right: 10 11 31 32 35 36 38 39 40 56 57
    INSTRUCTION <instruction*> (69)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 11 12
    DECLARAR <instruction*> (70)
        on left: 28 29
        on right: 14 39 40
    ASIGNAR <instruction*> (71)
        on left: 30
        on right: 15 39
    IF <instruction*> (72)
        on left: 31 32
        on right: 26
    ELIF_LIST <list_instruction*> (73)
        on left: 33 34
        on right: 31 33
    ELIF <instruction*> (74)
        on left: 35
        on right: 33 34
    ELSE <list_instruction*> (75)
        on left: 36 37
        on right: 31 32
    WHILE <instruction*> (76)
        on left: 38
        on right: 24
    FOR <instruction*> (77)
        on left: 39 40
        on right: 25
    BREAK <instruction*> (78)
        on left: 41
        on right: 18
    CONT <instruction*> (79)
        on left: 42
        on right: 19
    VECTOR <instruction*> (80)
        on left: 43 44 45 46 47 48 49
        on right: 16
    MATRIZ <instruction*> (81)
        on left: 50 51 52
        on right: 17
    PRINT <instruction*> (82)
        on left: 53
        on right: 13
    INCREMENTO <instruction*> (83)
        on left: 54 55
        on right: 21 40
    FUNC <instruction*> (84)
        on left: 56 57
        on right: 8 9
    CALL_EXP <expression*> (85)
        on left: 58 59
        on right: 101
    LLAMADAF <instruction*> (86)
        on left: 60 61
        on right: 22
    RETORNO <instruction*> (87)
        on left: 62 63
        on right: 20
    STRUCT_DECLARATION <instruction*> (88)
        on left: 64
        on right: 6 7
    STRUCT_CREATION <instruction*> (89)
        on left: 65
        on right: 23
    DEC_LIST <map_struct_dec*> (90)
        on left: 66 67
        on right: 64 66
    TYPES <TipoDato> (91)
        on left: 68 69 70 71 72 73
        on right: 28 29 43 44 50 51 52 56 57 66 67 73 76 77
    LISTAEXP <list_expression*> (92)
        on left: 74 75
        on right: 43 50 53 58 60 65 74 96
    LISTPARAM <map_struct_dec*> (93)
        on left: 76 77
        on right: 56 76
    EXP <expression*> (94)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
        on right: 29 30 31 32 35 38 39 40 45 46 47 48 49 50 51 52 62 74 75 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 98 113
    PRIMITIVE <expression*> (95)
        on left: 102 103 104 105 106 107 108 109 110 111 112
        on right: 100
    LIST_ARR <expression*> (96)
        on left: 113 114
        on right: 112 113


Estado 0

    0 $accept: • START END

    tk_void     desplazar e ir al estado 1
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_struct  desplazar e ir al estado 6
    res_VECTOR  desplazar e ir al estado 7

    START               ir al estado 8
    LIST_STRUC          ir al estado 9
    LIST_FUNC           ir al estado 10
    MAIN                ir al estado 11
    FUNC                ir al estado 12
    STRUCT_DECLARATION  ir al estado 13
    TYPES               ir al estado 14


Estado 1

   10 MAIN: tk_void • rmain tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   72 TYPES: tk_void •

    rmain  desplazar e ir al estado 15

    $default  reduce usando la regla 72 (TYPES)


Estado 2

   68 TYPES: tk_int •

    $default  reduce usando la regla 68 (TYPES)


Estado 3

   69 TYPES: tk_string •

    $default  reduce usando la regla 69 (TYPES)


Estado 4

   70 TYPES: tk_float •

    $default  reduce usando la regla 70 (TYPES)


Estado 5

   71 TYPES: tk_bool •

    $default  reduce usando la regla 71 (TYPES)


Estado 6

   64 STRUCT_DECLARATION: res_struct • id tk_LLAVA DEC_LIST tk_LLAVC

    id  desplazar e ir al estado 16


Estado 7

   73 TYPES: res_VECTOR • tk_menorq TYPES tk_mayorq

    tk_menorq  desplazar e ir al estado 17


Estado 8

    0 $accept: START • END

    END  desplazar e ir al estado 18


Estado 9

    4 START: LIST_STRUC • LIST_FUNC MAIN
    5      | LIST_STRUC • MAIN
    6 LIST_STRUC: LIST_STRUC • STRUCT_DECLARATION

    tk_void     desplazar e ir al estado 1
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_struct  desplazar e ir al estado 6
    res_VECTOR  desplazar e ir al estado 7

    LIST_FUNC           ir al estado 19
    MAIN                ir al estado 20
    FUNC                ir al estado 12
    STRUCT_DECLARATION  ir al estado 21
    TYPES               ir al estado 14


Estado 10

    2 START: LIST_FUNC • MAIN
    3      | LIST_FUNC • LIST_STRUC MAIN
    8 LIST_FUNC: LIST_FUNC • FUNC

    tk_void     desplazar e ir al estado 1
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_struct  desplazar e ir al estado 6
    res_VECTOR  desplazar e ir al estado 7

    LIST_STRUC          ir al estado 22
    MAIN                ir al estado 23
    FUNC                ir al estado 24
    STRUCT_DECLARATION  ir al estado 13
    TYPES               ir al estado 14


Estado 11

    1 START: MAIN •

    $default  reduce usando la regla 1 (START)


Estado 12

    9 LIST_FUNC: FUNC •

    $default  reduce usando la regla 9 (LIST_FUNC)


Estado 13

    7 LIST_STRUC: STRUCT_DECLARATION •

    $default  reduce usando la regla 7 (LIST_STRUC)


Estado 14

   56 FUNC: TYPES • id tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   57     | TYPES • id tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    id  desplazar e ir al estado 25


Estado 15

   10 MAIN: tk_void rmain • tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 26


Estado 16

   64 STRUCT_DECLARATION: res_struct id • tk_LLAVA DEC_LIST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 27


Estado 17

   73 TYPES: res_VECTOR tk_menorq • TYPES tk_mayorq

    tk_void     desplazar e ir al estado 28
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_VECTOR  desplazar e ir al estado 7

    TYPES  ir al estado 29


Estado 18

    0 $accept: START END •

    $default  aceptar


Estado 19

    4 START: LIST_STRUC LIST_FUNC • MAIN
    8 LIST_FUNC: LIST_FUNC • FUNC

    tk_void     desplazar e ir al estado 1
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_VECTOR  desplazar e ir al estado 7

    MAIN   ir al estado 30
    FUNC   ir al estado 24
    TYPES  ir al estado 14


Estado 20

    5 START: LIST_STRUC MAIN •

    $default  reduce usando la regla 5 (START)


Estado 21

    6 LIST_STRUC: LIST_STRUC STRUCT_DECLARATION •

    $default  reduce usando la regla 6 (LIST_STRUC)


Estado 22

    3 START: LIST_FUNC LIST_STRUC • MAIN
    6 LIST_STRUC: LIST_STRUC • STRUCT_DECLARATION

    tk_void     desplazar e ir al estado 31
    res_struct  desplazar e ir al estado 6

    MAIN                ir al estado 32
    STRUCT_DECLARATION  ir al estado 21


Estado 23

    2 START: LIST_FUNC MAIN •

    $default  reduce usando la regla 2 (START)


Estado 24

    8 LIST_FUNC: LIST_FUNC FUNC •

    $default  reduce usando la regla 8 (LIST_FUNC)


Estado 25

   56 FUNC: TYPES id • tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   57     | TYPES id • tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 33


Estado 26

   10 MAIN: tk_void rmain tk_PARA • tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARC  desplazar e ir al estado 34


Estado 27

   64 STRUCT_DECLARATION: res_struct id tk_LLAVA • DEC_LIST tk_LLAVC

    tk_void     desplazar e ir al estado 28
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_VECTOR  desplazar e ir al estado 7

    DEC_LIST  ir al estado 35
    TYPES     ir al estado 36


Estado 28

   72 TYPES: tk_void •

    $default  reduce usando la regla 72 (TYPES)


Estado 29

   73 TYPES: res_VECTOR tk_menorq TYPES • tk_mayorq

    tk_mayorq  desplazar e ir al estado 37


Estado 30

    4 START: LIST_STRUC LIST_FUNC MAIN •

    $default  reduce usando la regla 4 (START)


Estado 31

   10 MAIN: tk_void • rmain tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    rmain  desplazar e ir al estado 15


Estado 32

    3 START: LIST_FUNC LIST_STRUC MAIN •

    $default  reduce usando la regla 3 (START)


Estado 33

   56 FUNC: TYPES id tk_PARA • LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   57     | TYPES id tk_PARA • tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_void     desplazar e ir al estado 28
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    tk_PARC     desplazar e ir al estado 38
    res_VECTOR  desplazar e ir al estado 7

    TYPES      ir al estado 39
    LISTPARAM  ir al estado 40


Estado 34

   10 MAIN: tk_void rmain tk_PARA tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 41


Estado 35

   64 STRUCT_DECLARATION: res_struct id tk_LLAVA DEC_LIST • tk_LLAVC
   66 DEC_LIST: DEC_LIST • TYPES id ';'

    tk_void     desplazar e ir al estado 28
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    tk_LLAVC    desplazar e ir al estado 42
    res_VECTOR  desplazar e ir al estado 7

    TYPES  ir al estado 43


Estado 36

   67 DEC_LIST: TYPES • id ';'

    id  desplazar e ir al estado 44


Estado 37

   73 TYPES: res_VECTOR tk_menorq TYPES tk_mayorq •

    $default  reduce usando la regla 73 (TYPES)


Estado 38

   57 FUNC: TYPES id tk_PARA tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 45


Estado 39

   77 LISTPARAM: TYPES • id

    id  desplazar e ir al estado 46


Estado 40

   56 FUNC: TYPES id tk_PARA LISTPARAM • tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   76 LISTPARAM: LISTPARAM • ',' TYPES id

    tk_PARC  desplazar e ir al estado 47
    ','      desplazar e ir al estado 48


Estado 41

   10 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA • LIST_INST tk_LLAVC

    error         desplazar e ir al estado 49
    id            desplazar e ir al estado 50
    PRINTF        desplazar e ir al estado 51
    tk_void       desplazar e ir al estado 28
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    res_IF        desplazar e ir al estado 52
    res_WHILE     desplazar e ir al estado 53
    res_FOR       desplazar e ir al estado 54
    res_BREAK     desplazar e ir al estado 55
    res_CONTINUE  desplazar e ir al estado 56
    res_RETURN    desplazar e ir al estado 57
    res_struct    desplazar e ir al estado 58
    res_VECTOR    desplazar e ir al estado 59

    LIST_INST        ir al estado 60
    INSTRUCTION      ir al estado 61
    DECLARAR         ir al estado 62
    ASIGNAR          ir al estado 63
    IF               ir al estado 64
    WHILE            ir al estado 65
    FOR              ir al estado 66
    BREAK            ir al estado 67
    CONT             ir al estado 68
    VECTOR           ir al estado 69
    MATRIZ           ir al estado 70
    PRINT            ir al estado 71
    INCREMENTO       ir al estado 72
    LLAMADAF         ir al estado 73
    RETORNO          ir al estado 74
    STRUCT_CREATION  ir al estado 75
    TYPES            ir al estado 76


Estado 42

   64 STRUCT_DECLARATION: res_struct id tk_LLAVA DEC_LIST tk_LLAVC •

    $default  reduce usando la regla 64 (STRUCT_DECLARATION)


Estado 43

   66 DEC_LIST: DEC_LIST TYPES • id ';'

    id  desplazar e ir al estado 77


Estado 44

   67 DEC_LIST: TYPES id • ';'

    ';'  desplazar e ir al estado 78


Estado 45

   57 FUNC: TYPES id tk_PARA tk_PARC tk_LLAVA • LIST_INST tk_LLAVC

    error         desplazar e ir al estado 49
    id            desplazar e ir al estado 50
    PRINTF        desplazar e ir al estado 51
    tk_void       desplazar e ir al estado 28
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    res_IF        desplazar e ir al estado 52
    res_WHILE     desplazar e ir al estado 53
    res_FOR       desplazar e ir al estado 54
    res_BREAK     desplazar e ir al estado 55
    res_CONTINUE  desplazar e ir al estado 56
    res_RETURN    desplazar e ir al estado 57
    res_struct    desplazar e ir al estado 58
    res_VECTOR    desplazar e ir al estado 59

    LIST_INST        ir al estado 79
    INSTRUCTION      ir al estado 61
    DECLARAR         ir al estado 62
    ASIGNAR          ir al estado 63
    IF               ir al estado 64
    WHILE            ir al estado 65
    FOR              ir al estado 66
    BREAK            ir al estado 67
    CONT             ir al estado 68
    VECTOR           ir al estado 69
    MATRIZ           ir al estado 70
    PRINT            ir al estado 71
    INCREMENTO       ir al estado 72
    LLAMADAF         ir al estado 73
    RETORNO          ir al estado 74
    STRUCT_CREATION  ir al estado 75
    TYPES            ir al estado 76


Estado 46

   77 LISTPARAM: TYPES id •

    $default  reduce usando la regla 77 (LISTPARAM)


Estado 47

   56 FUNC: TYPES id tk_PARA LISTPARAM tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 80


Estado 48

   76 LISTPARAM: LISTPARAM ',' • TYPES id

    tk_void     desplazar e ir al estado 28
    tk_int      desplazar e ir al estado 2
    tk_string   desplazar e ir al estado 3
    tk_float    desplazar e ir al estado 4
    tk_bool     desplazar e ir al estado 5
    res_VECTOR  desplazar e ir al estado 7

    TYPES  ir al estado 81


Estado 49

   27 INSTRUCTION: error • ';'

    ';'  desplazar e ir al estado 82


Estado 50

   30 ASIGNAR: id • '=' EXP
   45 VECTOR: id • '.' res_pushF tk_PARA EXP tk_PARC
   46       | id • '.' res_pushB tk_PARA EXP tk_PARC
   47       | id • '.' res_remove tk_PARA EXP tk_PARC
   48       | id • tk_CORCHA EXP tk_CORCHC '=' id tk_CORCHA EXP tk_CORCHC
   49       | id • tk_CORCHA EXP tk_CORCHC '=' EXP
   54 INCREMENTO: id • mas_mas
   55           | id • menos_menos
   60 LLAMADAF: id • tk_PARA LISTAEXP tk_PARC
   61         | id • tk_PARA tk_PARC

    tk_PARA      desplazar e ir al estado 83
    tk_CORCHA    desplazar e ir al estado 84
    mas_mas      desplazar e ir al estado 85
    menos_menos  desplazar e ir al estado 86
    '='          desplazar e ir al estado 87
    '.'          desplazar e ir al estado 88


Estado 51

   53 PRINT: PRINTF • tk_PARA LISTAEXP tk_PARC

    tk_PARA  desplazar e ir al estado 89


Estado 52

   31 IF: res_IF • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELIF_LIST ELSE
   32   | res_IF • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELSE

    tk_PARA  desplazar e ir al estado 90


Estado 53

   38 WHILE: res_WHILE • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 91


Estado 54

   39 FOR: res_FOR • tk_PARA DECLARAR ';' EXP ';' ASIGNAR tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   40    | res_FOR • tk_PARA DECLARAR ';' EXP ';' INCREMENTO tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 92


Estado 55

   41 BREAK: res_BREAK •

    $default  reduce usando la regla 41 (BREAK)


Estado 56

   42 CONT: res_CONTINUE •

    $default  reduce usando la regla 42 (CONT)


Estado 57

   62 RETORNO: res_RETURN • EXP
   63        | res_RETURN •

    NUMERO      desplazar e ir al estado 93
    id          desplazar e ir al estado 94
    CADENA      desplazar e ir al estado 95
    DECIMAL     desplazar e ir al estado 96
    tk_PARA     desplazar e ir al estado 97
    tk_LLAVA    desplazar e ir al estado 98
    tk_true     desplazar e ir al estado 99
    tk_false    desplazar e ir al estado 100
    tk_nulo     desplazar e ir al estado 101
    tk_not      desplazar e ir al estado 102
    res_mean    desplazar e ir al estado 103
    res_median  desplazar e ir al estado 104
    res_mode    desplazar e ir al estado 105
    res_atoi    desplazar e ir al estado 106
    res_atof    desplazar e ir al estado 107
    res_iota    desplazar e ir al estado 108

    $default  reduce usando la regla 63 (RETORNO)

    CALL_EXP   ir al estado 109
    EXP        ir al estado 110
    PRIMITIVE  ir al estado 111
    LIST_ARR   ir al estado 112


Estado 58

   65 STRUCT_CREATION: res_struct • id id '=' tk_LLAVA LISTAEXP tk_LLAVC ';'

    id  desplazar e ir al estado 113


Estado 59

   43 VECTOR: res_VECTOR • tk_menorq TYPES tk_mayorq id '=' tk_CORCHA LISTAEXP tk_CORCHC
   44       | res_VECTOR • tk_menorq TYPES tk_mayorq id
   73 TYPES: res_VECTOR • tk_menorq TYPES tk_mayorq

    tk_menorq  desplazar e ir al estado 114


Estado 60

   10 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA LIST_INST • tk_LLAVC
   11 LIST_INST: LIST_INST • INSTRUCTION

    error         desplazar e ir al estado 49
    id            desplazar e ir al estado 50
    PRINTF        desplazar e ir al estado 51
    tk_void       desplazar e ir al estado 28
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    tk_LLAVC      desplazar e ir al estado 115
    res_IF        desplazar e ir al estado 52
    res_WHILE     desplazar e ir al estado 53
    res_FOR       desplazar e ir al estado 54
    res_BREAK     desplazar e ir al estado 55
    res_CONTINUE  desplazar e ir al estado 56
    res_RETURN    desplazar e ir al estado 57
    res_struct    desplazar e ir al estado 58
    res_VECTOR    desplazar e ir al estado 59

    INSTRUCTION      ir al estado 116
    DECLARAR         ir al estado 62
    ASIGNAR          ir al estado 63
    IF               ir al estado 64
    WHILE            ir al estado 65
    FOR              ir al estado 66
    BREAK            ir al estado 67
    CONT             ir al estado 68
    VECTOR           ir al estado 69
    MATRIZ           ir al estado 70
    PRINT            ir al estado 71
    INCREMENTO       ir al estado 72
    LLAMADAF         ir al estado 73
    RETORNO          ir al estado 74
    STRUCT_CREATION  ir al estado 75
    TYPES            ir al estado 76


Estado 61

   12 LIST_INST: INSTRUCTION •

    $default  reduce usando la regla 12 (LIST_INST)


Estado 62

   14 INSTRUCTION: DECLARAR • ';'

    ';'  desplazar e ir al estado 117


Estado 63

   15 INSTRUCTION: ASIGNAR • ';'

    ';'  desplazar e ir al estado 118


Estado 64

   26 INSTRUCTION: IF •

    $default  reduce usando la regla 26 (INSTRUCTION)


Estado 65

   24 INSTRUCTION: WHILE •

    $default  reduce usando la regla 24 (INSTRUCTION)


Estado 66

   25 INSTRUCTION: FOR •

    $default  reduce usando la regla 25 (INSTRUCTION)


Estado 67

   18 INSTRUCTION: BREAK • ';'

    ';'  desplazar e ir al estado 119


Estado 68

   19 INSTRUCTION: CONT • ';'

    ';'  desplazar e ir al estado 120


Estado 69

   16 INSTRUCTION: VECTOR • ';'

    ';'  desplazar e ir al estado 121


Estado 70

   17 INSTRUCTION: MATRIZ • ';'

    ';'  desplazar e ir al estado 122


Estado 71

   13 INSTRUCTION: PRINT • ';'

    ';'  desplazar e ir al estado 123


Estado 72
